--- a/client/src/pages/Landing/Landing.css
+++ b/client/src/pages/Landing/Landing.css
@@ -3,7 +3,7 @@ body, html {
     margin: 0;
 }
 
-h1 {
+h1, h2 {
     color: white;
 }
 
@@ -23,16 +23,19 @@ h1 {
     
 } */ 
 
-.welcome {
+/* .welcome {
     color: red;
-}
+} */
 
 body, html {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./meat_veg.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./pizza_oven.jpg"); 
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 /* The hero image */
@@ -74,5 +77,9 @@ body, html {
 p {
   color: white;
   font-size: larger;
-  text-emphasis: bold;
+  font-weight: 500;
 }
+
+.row {
+  margin-top: 40px !important;
+} 
